# gnome-weather

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  COPYING.md  Makefile.am  NEWS  README.md  autogen.sh  configure.ac  eslint.config.mjs  gnome-weather.doap  meson.build  meson_options.txt  meson_post_install.py  org.gnome.Weather-unstable.json  org.gnome.Weather.Application.spec  org.gnome.Weather.json  org.gnome.Weather.spec  org.gnome.Weather.xdg-app.json  package-lock.json  package.json  prettier.config.js  python3-dogtail.json  tsconfig.json
data/: CREDITS  Makefile.am  app-menu.ui  application.css  city.ui  day-entry.ui  gnome-weather.desktop.in  gnome-weather.gresource.xml  hour-entry.ui  meson.build  new-location-dialog.ui  org.gnome.Weather.Application.appdata.xml.in  org.gnome.Weather.Application.busname  org.gnome.Weather.Application.data.gresource.xml  org.gnome.Weather.Application.desktop.in  org.gnome.Weather.Application.desktop.in.in  org.gnome.Weather.Application.gresource.xml  org.gnome.Weather.Application.gschema.xml  org.gnome.Weather.Application.search-provider.ini  org.gnome.Weather.Application.service.in  org.gnome.Weather.BackgroundService.data.gresource.xml  org.gnome.Weather.BackgroundService.service.in  org.gnome.Weather.appdata.xml.in  org.gnome.Weather.appdata.xml.in.in  org.gnome.Weather.data.gresource.xml  org.gnome.Weather.desktop.in.in  org.gnome.Weather.gschema.xml  org.gnome.Weather.metainfo.xml.in.in  org.gnome.Weather.search-provider.ini  org.gnome.Weather.search-provider.ini.in  org.gnome.Weather.service.in  places-popover.ui  preferences.ui  primary-menu.ui  style-dark.css  style-hc.css  style.css  weather-widget.ui  window.ui
data/icons/: Makefile.am  meson.build
data/status/: 00-convert-to-small.sh
lib/: Makefile.am  gweather-ui-util.c  gweather-ui-util.h
po/: LINGUAS  POTFILES.in  POTFILES.skip  ab.po  af.po  an.po  ar.po  as.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  ckb.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fil.po  fr.po  fur.po  fy.po  ga.po  gd.po  gl.po  gu.po  he.po  hi.po  hr.po  (+48 more)
src/: Makefile.am  app.py  city.js  conditions.js  conditions.py  currentLocationController.js  forecast.js  forecast.py  gnome-weather  gnome-weather.in  main.js  meson.build  org.gnome.Weather.Application.in  org.gnome.Weather.Application.src.gresource.xml  org.gnome.Weather.BackgroundService.in  org.gnome.Weather.BackgroundService.src.gresource.xml  org.gnome.Weather.BackgroundService.src.gresource.xml.in  org.gnome.Weather.in  org.gnome.Weather.src.gresource.xml  org.gnome.Weather.src.gresource.xml.in  package.js  params.js  searchProvider.js  strings.js  strings.py  util.js  util.py  view.js  widget.py  window.js  world.js
src/app/: application.js  application.ts  city.js  city.ts  currentLocationController.js  currentLocationController.ts  dailyForecast.js  dailyForecast.ts  entry.js  entry.ts  forecast.js  hourlyForecast.js  hourlyForecast.ts  locationRow.js  locationRow.ts  locationRow.ui  main.js  main.ts  shell.js  shell.ts  thermometer.js  thermometer.ts  thermometer.ui  weeklyForecast.js  window.js  window.ts  world.js  world.ts
src/misc/: params.js  util.js  util.ts
src/service/: main.js  main.ts  searchProvider.js  searchProvider.ts
src/shared/: strings.js  world.js  world.ts
tests/: Makefile.am  meson.build  testutil.py  world_view.py
types/: ambient.d.ts  geocodeglib-2.0.d.ts  gweather-4.0.d.ts
